fea-rs/test-data/parse-tests/bad/value_record_def_outside_top_level.fea
# fonttools accepts both of these but they're disallowed by the spec,
# and given that they do not seem to actually be used anywhere I would
# prefer to skip handling them as well.
feature test {
    valueRecordDef 123 BAD;
} test;

lookup shmookup {
    valueRecordDef <4 3 2 1> ALSO_BAD;
} shmookup;
