fea-rs/test-data/parse-tests/bad/value_record_def_outside_top_level.ERR
error: 'valueRecordDef' Not valid in a feature block
in ./test-data/parse-tests/bad/value_record_def_outside_top_level.fea at 5:4
  | 
5 |     valueRecordDef 123 BAD;
  |     ^^^^^^^^^^^^^^

error: 'valueRecordDef' Not valid in a lookup block
in ./test-data/parse-tests/bad/value_record_def_outside_top_level.fea at 9:4
  | 
9 |     valueRecordDef <4 3 2 1> ALSO_BAD;
  |     ^^^^^^^^^^^^^^
